@@ -20,10 +20,6 @@
         "block/wood/trough/large/legumefill4",
         "block/wood/trough/large/legumefill4"
       ],
-      "foodFor": [
-        "pig-*"
-      ],
-      "foodForDesc": "trough-treat-pigs",
       "textureCode": "contents-peanut"
     },
     "side": "server",
@@ -50,10 +46,6 @@
         "block/wood/trough/large/eggfill4",
         "block/wood/trough/large/eggfill4"
       ],
-      "foodFor": [
-        "pig-*"
-      ],
-      "foodForDesc": "trough-treat-pigs",
       "textureCode": "contents-egg"
     },
     side: "server",
@@ -268,5 +260,413 @@
     },
     side: "server",
     "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/contentConfig/-",
+    "value": {
+      "code": "breadcrumbs-spelt",
+      "content": {
+        "type": "item",
+        "code": "expandedfoods:breadcrumbs-spelt"
+      },
+      "quantityPerFillLevel": 1,
+      "maxFillLevels": 8,
+      "shapesPerFillLevel": [
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill4",
+        "block/wood/trough/large/eggfill4"
+      ],
+      "textureCode": "contents-spelt"
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-spelt",
+    "value": {
+      "base": "block/wood/trough/small/spelt"
+    },
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/contentConfig/-",
+    "value": {
+      "code": "breadcrumbs-rye",
+      "content": {
+        "type": "item",
+        "code": "expandedfoods:breadcrumbs-rye"
+      },
+      "quantityPerFillLevel": 1,
+      "maxFillLevels": 8,
+      "shapesPerFillLevel": [
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill4",
+        "block/wood/trough/large/eggfill4"
+      ],
+      "textureCode": "contents-rye"
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-rye",
+    "value": {
+      "base": "block/wood/trough/small/rye"
+    },
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/contentConfig/-",
+    "value": {
+      "code": "breadcrumbs-flax",
+      "content": {
+        "type": "item",
+        "code": "expandedfoods:breadcrumbs-flax"
+      },
+      "quantityPerFillLevel": 1,
+      "maxFillLevels": 8,
+      "shapesPerFillLevel": [
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill4",
+        "block/wood/trough/large/eggfill4"
+      ],
+      "textureCode": "contents-flax"
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-flax",
+    "value": {
+      "base": "block/wood/trough/small/flax"
+    },
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/contentConfig/-",
+    "value": {
+      "code": "breadcrumbs-rice",
+      "content": {
+        "type": "item",
+        "code": "expandedfoods:breadcrumbs-rice"
+      },
+      "quantityPerFillLevel": 1,
+      "maxFillLevels": 8,
+      "shapesPerFillLevel": [
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill4",
+        "block/wood/trough/large/eggfill4"
+      ],
+      "textureCode": "contents-rice"
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-rice",
+    "value": {
+      "base": "block/wood/trough/small/rice"
+    },
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/contentConfig/-",
+    "value": {
+      "code": "breadcrumbs-cassava",
+      "content": {
+        "type": "item",
+        "code": "expandedfoods:breadcrumbs-cassava"
+      },
+      "quantityPerFillLevel": 1,
+      "maxFillLevels": 8,
+      "shapesPerFillLevel": [
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill4",
+        "block/wood/trough/large/eggfill4"
+      ],
+      "textureCode": "contents-cassava"
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-cassava",
+    "value": {
+      "base": "block/wood/trough/small/cassava"
+    },
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/contentConfig/-",
+    "value": {
+      "code": "breadcrumbs-amaranth",
+      "content": {
+        "type": "item",
+        "code": "expandedfoods:breadcrumbs-amaranth"
+      },
+      "quantityPerFillLevel": 1,
+      "maxFillLevels": 8,
+      "shapesPerFillLevel": [
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill4",
+        "block/wood/trough/large/eggfill4"
+      ],
+      "textureCode": "contents-amaranth"
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-amaranth",
+    "value": {
+      "base": "block/wood/trough/small/amaranth"
+    },
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/contentConfig/-",
+    "value": {
+      "code": "breadcrumbs-sunflower",
+      "content": {
+        "type": "item",
+        "code": "expandedfoods:breadcrumbs-sunflower"
+      },
+      "quantityPerFillLevel": 1,
+      "maxFillLevels": 8,
+      "shapesPerFillLevel": [
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill4",
+        "block/wood/trough/large/eggfill4"
+      ],
+      "textureCode": "contents-sunflower"
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-sunflower",
+    "value": {
+      "base": "block/wood/trough/small/sunflower"
+    },
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-amaranth",
+    "value": {
+      "base": "block/wood/trough/small/amaranth"
+    },
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/contentConfig/-",
+    "value": {
+      "code": "breadcrumbs-birch",
+      "content": {
+        "type": "item",
+        "code": "expandedfoods:breadcrumbs-birch"
+      },
+      "quantityPerFillLevel": 1,
+      "maxFillLevels": 8,
+      "shapesPerFillLevel": [
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill4",
+        "block/wood/trough/large/eggfill4"
+      ],
+      "textureCode": "contents-birch"
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json",
+    dependsOn: [{ "modid": "ancienttools"}]
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-birch",
+    "value": {
+      "base": "block/wood/trough/small/birch"
+    },
+    "file": "blocktypes/wood/trough-large.json",
+    dependsOn: [{ "modid": "ancienttools"}]
+  },
+  {
+    "op": "add",
+    "path": "/attributes/contentConfig/-",
+    "value": {
+      "code": "breadcrumbs-pine",
+      "content": {
+        "type": "item",
+        "code": "expandedfoods:breadcrumbs-pine"
+      },
+      "quantityPerFillLevel": 1,
+      "maxFillLevels": 8,
+      "shapesPerFillLevel": [
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill4",
+        "block/wood/trough/large/eggfill4"
+      ],
+      "textureCode": "contents-pine"
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json",
+    dependsOn: [{ "modid": "ancienttools"}]
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pine",
+    "value": {
+      "base": "block/wood/trough/small/pine"
+    },
+    "file": "blocktypes/wood/trough-large.json",
+    dependsOn: [{ "modid": "ancienttools"}]
+  },
+  {
+    "op": "add",
+    "path": "/attributes/contentConfig/-",
+    "value": {
+      "code": "acornbreadcrumbs",
+      "content": {
+        "type": "item",
+        "code": "expandedfoods:acornbreadcrumbs-*"
+      },
+      "quantityPerFillLevel": 1,
+      "maxFillLevels": 8,
+      "shapesPerFillLevel": [
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill4",
+        "block/wood/trough/large/eggfill4"
+      ],
+      "textureCode": "contents-acorn"
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json",
+    dependsOn: [{ "modid": "acorns"}]
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-acorn",
+    "value": {
+      "base": "block/wood/trough/small/acorn"
+    },
+    "file": "blocktypes/wood/trough-large.json",
+    dependsOn: [{ "modid": "acorns"}]
+  },
+  {
+    "op": "add",
+    "path": "/attributes/contentConfig/-",
+    "value": {
+      "code": "herbalbreadcrumbs",
+      "content": {
+        "type": "item",
+        "code": "expandedfoods:herbalbreadcrumbs"
+      },
+      "quantityPerFillLevel": 1,
+      "maxFillLevels": 8,
+      "shapesPerFillLevel": [
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill4",
+        "block/wood/trough/large/eggfill4"
+      ],
+      "textureCode": "contents-spelt"
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json",
+    dependsOn: [{ "modid": "wildcraft"}]
+  },
+  {
+    "op": "add",
+    "path": "/attributes/contentConfig/-",
+    "value": {
+      "code": "herbalacornbreadcrumbs",
+      "content": {
+        "type": "item",
+        "code": "expandedfoods:herbalacornbreadcrumbs"
+      },
+      "quantityPerFillLevel": 1,
+      "maxFillLevels": 8,
+      "shapesPerFillLevel": [
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill1",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill2",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill3",
+        "block/wood/trough/large/eggfill4",
+        "block/wood/trough/large/eggfill4"
+      ], 
+      "textureCode": "contents-acorn"
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json",
+    dependsOn: [{ "modid": "wildcraft"}, { "modid": "acorns"}]
   },
 ]
