@@ -70,6 +70,8 @@ Egg yolk can be used to make pasta - DONE!!!
 Added simmer recipe to rehydrate hardened lard - DONE!!!
 Pressed mash trough texture fixed - DONE!!!
 Chickens and raccoons will now eat peanut skins from troughs - DONE!!!
+Bread crumbs can be used in large trough - DONE!!!
+Bread crumbs can be used in large trough - DONE!!!
 
 Vanilla fish can be used in EF stuff; broth, boiling, meals - DONE!!!
 Vanilla fish have part-baked & cooked states, can be baked, used in pies - DONE!!!
